// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should render textinput 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render textinput with error 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={true}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Some error occurred"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="danger"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel="Erro Some error occurred"
    centered={false}
    large={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "color": "#FF4F3F",
          "marginTop": 4,
          "textAlign": "left",
        },
        {},
      ]
    }
    testID="error_test"
    variant="xs"
  >
    Some error occurred
  </Text>
</View>
`;

exports[`<TextInput /> should render with bordered style 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedBackgroundColor="#f5f5f5"
      borderedColor="#ccc"
      borderedHeight={50}
      borderedRadius={8}
      borderedWidth={2}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "backgroundColor": "#f5f5f5",
            "borderColor": "#ccc",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 2,
            "height": 50,
            "justifyContent": "center",
            "paddiingTop": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Label"
        lineHeightVariant="min"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "left": 0,
              "position": "absolute",
              "top": -32,
            },
            {},
          ]
        }
        variant="xs"
      >
        Label
      </Text>
      <View
        hasBottomLine={true}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          hasLeftIcon={false}
          multiline={false}
          style={
            [
              {
                "flexDirection": "column",
                "marginLeft": 0,
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "92%",
              },
            ]
          }
        >
          <TextInput
            accessibility=""
            accessibilityHint="Enter text"
            accessibilityLabel=""
            accessibilityLiveRegion="polite"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            allowFontScaling={false}
            autoFocus={false}
            centered={false}
            contrast={false}
            id="test"
            isPlaceholder={false}
            keyboardType="default"
            large={false}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            options={
              {
                "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
                "translation": {
                  "*": [Function],
                },
                "validator": [Function],
              }
            }
            placeholder=""
            placeholderTextColor="#999999"
            status="default"
            style={
              [
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                {},
              ]
            }
            testID="test"
            type="custom"
            underlineColorAndroid="transparent"
            value=""
            variant="md"
            withBottomline={true}
          />
        </View>
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with both label and borderedLabel 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedHeight={50}
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderColor": "#4255EF",
            "borderRadius": 0,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 50,
            "justifyContent": "center",
            "paddiingTop": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
          },
        ]
      }
    >
      <View
        hasBottomLine={true}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          hasLeftIcon={false}
          multiline={false}
          style={
            [
              {
                "flexDirection": "column",
                "marginLeft": 0,
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "92%",
              },
            ]
          }
        >
          <TextInput
            accessibility=""
            accessibilityHint="Enter text"
            accessibilityLabel=""
            accessibilityLiveRegion="polite"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            allowFontScaling={false}
            autoFocus={false}
            centered={false}
            contrast={false}
            id="test"
            isPlaceholder={false}
            keyboardType="default"
            large={false}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            options={
              {
                "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
                "translation": {
                  "*": [Function],
                },
                "validator": [Function],
              }
            }
            placeholder=""
            placeholderTextColor="#999999"
            status="default"
            style={
              [
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                {},
              ]
            }
            testID="test"
            type="custom"
            underlineColorAndroid="transparent"
            value=""
            variant="md"
            withBottomline={true}
          />
        </View>
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with bottom line 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with custom icon type 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
        <View
          collapsable={false}
          style={{}}
        >
          <View
            accessibilityLabel="heart icon"
            accessibilityRole="image"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={{}}
            importantForAccessibility="no-hide-descendants"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="icon_heart"
          >
            <View>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#4255EF",
                      "fontSize": 16,
                    },
                    undefined,
                    {
                      "fontFamily": "fa-solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with custom inputLeftPadding and inputRightPadding 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        inputLeftPadding={15}
        inputRightPadding={15}
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with custom inputPadding 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        padding={20}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with different status 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="success"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#96C920",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="success"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="success"
        style={
          [
            {
              "backgroundColor": "#96C920",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with error state 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={true}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Este campo é obrigatório"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="danger"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
  <Text
    accessibilityLabel="Erro Este campo é obrigatório"
    centered={false}
    large={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "color": "#FF4F3F",
          "marginTop": 4,
          "textAlign": "left",
        },
        {},
      ]
    }
    testID="error_test"
    variant="xs"
  >
    Este campo é obrigatório
  </Text>
</View>
`;

exports[`<TextInput /> should render with fixed label 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      isFloating={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      >
        Nome
      </Text>
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with floating label 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      isFloating={true}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      >
        Nome
      </Text>
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with iconNameBordered 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedHeight={50}
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderColor": "#4255EF",
            "borderRadius": 0,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 50,
            "justifyContent": "center",
            "paddiingTop": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
          },
        ]
      }
    >
      <View
        hasBottomLine={true}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={{}}
        >
          <View
            accessibilityLabel="search icon"
            accessibilityRole="image"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={{}}
            importantForAccessibility="no-hide-descendants"
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="icon_search"
          >
            <View>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#4255EF",
                      "fontSize": 16,
                    },
                    undefined,
                    {
                      "fontFamily": "FontAwesome5Free-Solid",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {
                      "fontWeight": "900",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
        <View
          hasLeftIcon={true}
          multiline={false}
          style={
            [
              {
                "flexDirection": "column",
                "marginLeft": 4,
                "paddingBottom": 0,
                "paddingLeft": 4,
                "paddingRight": 4,
                "paddingTop": 0,
                "width": "86%",
              },
            ]
          }
        >
          <TextInput
            accessibility=""
            accessibilityHint="Enter text"
            accessibilityLabel=""
            accessibilityLiveRegion="polite"
            accessibilityRole="text"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            allowFontScaling={false}
            autoFocus={false}
            centered={false}
            contrast={false}
            id="test"
            isPlaceholder={false}
            keyboardType="default"
            large={false}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            options={
              {
                "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
                "translation": {
                  "*": [Function],
                },
                "validator": [Function],
              }
            }
            placeholder=""
            placeholderTextColor="#999999"
            status="default"
            style={
              [
                {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                {},
              ]
            }
            testID="test"
            type="custom"
            underlineColorAndroid="transparent"
            value=""
            variant="md"
            withBottomline={true}
          />
        </View>
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with multiline 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={true}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={true}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={true}
          numberOfLines={3}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={true}
        />
      </View>
      <View
        contrast={false}
        status="default"
        style={
          [
            {
              "backgroundColor": "#444444",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render with props 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={true}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <View
        multiline={true}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter your name"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={true}
          centered={true}
          contrast={true}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={true}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder="Enter your name"
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="lg"
          withBottomline={true}
        />
      </View>
      <View
        contrast={true}
        status="default"
        style={
          [
            {
              "backgroundColor": "#ffffff",
              "height": 0.5,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<TextInput /> should render without bottom line 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    multiline={false}
    style={
      [
        {
          "justifyContent": "flex-start",
          "paddingTop": 0,
          "position": "relative",
        },
        {},
      ]
    }
  >
    <View
      borderedRadius={0}
      borderedWidth={1}
      error={false}
      showBorderErrored={true}
      style={
        [
          {
            "borderColor": "black",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
        ]
      }
    >
      <Text
        accessibilityLabel="Erro "
        collapsable={false}
        contrast={false}
        lineHeightVariant="min"
        status="default"
        style={
          [
            {
              "color": "#444444",
              "fontSize": 13,
              "lineHeight": 15.6,
            },
            {
              "color": "#444444",
              "position": "absolute",
              "top": 8,
            },
            {
              "fontSize": 12,
              "opacity": 0.4,
              "top": -12,
            },
          ]
        }
        testID="error_test"
        variant="xs"
      />
      <View
        multiline={false}
        rightIcon={false}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "maxWidth": "100%",
              "overflow": "hidden",
              "paddingLeft": 4,
              "paddingRight": 4,
              "paddingTop": 4,
            },
          ]
        }
      >
        <TextInput
          accessibility=""
          accessibilityHint="Enter text"
          accessibilityLabel=""
          accessibilityLiveRegion="polite"
          accessibilityRole="text"
          accessibilityState={
            {
              "disabled": false,
            }
          }
          allowFontScaling={false}
          autoFocus={false}
          centered={false}
          contrast={false}
          id="test"
          isPlaceholder={false}
          keyboardType="default"
          large={false}
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          options={
            {
              "mask": "****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************",
              "translation": {
                "*": [Function],
              },
              "validator": [Function],
            }
          }
          placeholder=""
          placeholderTextColor="#999999"
          status="default"
          style={
            [
              {
                "flexBasis": 0,
                "flexGrow": 1,
                "flexShrink": 1,
              },
              {},
            ]
          }
          testID="test"
          type="custom"
          underlineColorAndroid="transparent"
          value=""
          variant="md"
          withBottomline={false}
        />
      </View>
    </View>
  </View>
</View>
`;
